// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase renders all appearances with props 1`] = `
<ButtonBase
  appearance="primary"
  aria-haspopup={true}
  disabled={true}
  forwardedref={null}
  iconEnd="system-check"
  iconStart="system-check"
  isFullWidth={true}
  isProcessing={true}
  type="submit"
>
  Button
</ButtonBase>
`;

exports[`ButtonBase renders all appearances with props 2`] = `
<ButtonBase
  appearance="secondary"
  aria-haspopup={true}
  disabled={true}
  forwardedref={null}
  iconEnd="system-check"
  iconStart="system-check"
  isFullWidth={true}
  isProcessing={true}
  type="submit"
>
  Button
</ButtonBase>
`;

exports[`ButtonBase renders all appearances with props 3`] = `
<ButtonBase
  appearance="standard"
  aria-haspopup={true}
  disabled={true}
  forwardedref={null}
  iconEnd="system-check"
  iconStart="system-check"
  isFullWidth={true}
  isProcessing={true}
  type="submit"
>
  Button
</ButtonBase>
`;

exports[`ButtonBase renders all appearances with props 4`] = `
<ButtonBase
  appearance="danger"
  aria-haspopup={true}
  disabled={true}
  forwardedref={null}
  iconEnd="system-check"
  iconStart="system-check"
  isFullWidth={true}
  isProcessing={true}
  type="submit"
>
  Button
</ButtonBase>
`;

exports[`ButtonBase renders all appearances with props 5`] = `
<ButtonBase
  appearance="success"
  aria-haspopup={true}
  disabled={true}
  forwardedref={null}
  iconEnd="system-check"
  iconStart="system-check"
  isFullWidth={true}
  isProcessing={true}
  type="submit"
>
  Button
</ButtonBase>
`;
